crates/au-cli/tests/it/snapshots/it__scenarios__fills-exclusive-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 27,
                        "line_col": {
                          "end": {
                            "col": 28,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/fills-exclusive-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "fills-exclusive-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "fills-exclusive-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/fills-exclusive-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 91,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            },
            "text": "Assumptions"
          },
          {
            "content": "[:assumptions] Page numbering is monotonic across versions.",
            "kind": "inline_code",
            "span": {
              "end": 153,
              "line_col": {
                "end": {
                  "col": 62,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 92
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "assumptions",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-exclusive-clean/type/decision.type.yaml",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-exclusive-clean/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 153,
                        "line_col": {
                          "end": {
                            "col": 62,
                            "line": 9
                          },
                          "start": {
                            "col": 1,
                            "line": 9
                          }
                        },
                        "start": 92
                      },
                      "file": "<root>/scenarios/fills-exclusive-clean/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Assumptions"
                      }
                    ],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "Page numbering is monotonic across versions."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Page numbering is monotonic across versions."
                }
              }
            ],
            "field": "assumptions"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/fills-exclusive-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/fills-exclusive-clean/decision.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Assumptions",
            "optional": false,
            "path": [
              "Assumptions"
            ],
            "present": true,
            "span": {
              "end": 91,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 77
            }
          }
        ]
      }
    ]
  }
}
