crates/au-cli/tests/it/snapshots/it__scenarios__fills-multi-field-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 29,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/fills-multi-field-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "fills-multi-field-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "fills-multi-field-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/fills-multi-field-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 93,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 81
            },
            "text": "Reasoning"
          },
          {
            "content": "[:causes] shared-volume contention dominated",
            "kind": "inline_code",
            "span": {
              "end": 148,
              "line_col": {
                "end": {
                  "col": 55,
                  "line": 10
                },
                "start": {
                  "col": 9,
                  "line": 10
                }
              },
              "start": 102
            }
          },
          {
            "content": "[:effects] dev pipelines run cleanly",
            "kind": "inline_code",
            "span": {
              "end": 199,
              "line_col": {
                "end": {
                  "col": 39,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 11
                }
              },
              "start": 161
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "causes",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-multi-field-clean/type/decision.type.yaml",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-multi-field-clean/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "effects",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-multi-field-clean/type/decision.type.yaml",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 148,
                        "line_col": {
                          "end": {
                            "col": 55,
                            "line": 10
                          },
                          "start": {
                            "col": 9,
                            "line": 10
                          }
                        },
                        "start": 102
                      },
                      "file": "<root>/scenarios/fills-multi-field-clean/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Reasoning"
                      }
                    ],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "shared-volume contention dominated"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "shared-volume contention dominated"
                }
              }
            ],
            "field": "causes"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/fills-multi-field-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 199,
                        "line_col": {
                          "end": {
                            "col": 39,
                            "line": 11
                          },
                          "start": {
                            "col": 1,
                            "line": 11
                          }
                        },
                        "start": 161
                      },
                      "file": "<root>/scenarios/fills-multi-field-clean/decision.md"
                    },
                    "section_path": [
                      {
                        "index": 1,
                        "text": "Reasoning"
                      }
                    ],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "dev pipelines run cleanly"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "dev pipelines run cleanly"
                }
              }
            ],
            "field": "effects"
          }
        ],
        "file": "<root>/scenarios/fills-multi-field-clean/decision.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Reasoning",
            "optional": false,
            "path": [
              "Reasoning"
            ],
            "present": true,
            "span": {
              "end": 93,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 81
            }
          }
        ]
      }
    ]
  }
}
